# xft

./: .bazelrc  .gitignore  CMakeLists.txt  MANIFEST.in  README.md  WORKSPACE  architecture.html  bazel-bin  bazel-out  bazel-testlogs  bazel-xft  pyproject.toml  pytest.ini  requirements.txt  setup.py
cpp/bindings/: bindings.cpp
cpp/xft/: array.h  memory.h  scalar.h  scalar_types.h  storage.h
tests/: test_array.cpp  test_base.py  test_dtype.py  test_memory.cpp  test_scalar.cpp
tests/cpp/: test_integration.cpp  test_scalar.cpp  test_storage.cpp
tests/debug/: verify_promotion.py
tests/python/: test_array.py
xft/: __init__.py  array.py
xft/_internal/: __init__.py  dtype.py
xftcpp/: BUILD.bazel  CMakeLists.txt
xftcpp/bindings/: BUILD.bazel  xft_core.cpp  xftcpp_main.cpp
xftcpp/debug/: pjrt_plugin_c_api.py
xftcpp/src/: BUILD.bazel  Version.cpp  Version.h  array.cpp  array.h  device.cpp  device.h  device_list.cpp  device_list.h  dtype.cpp  dtype.h  index.h  index_domain.h  main.cpp  memory.cpp  memory.h  pjrt_plugin.cpp  pjrt_plugin.h  ref_count.h  shape.cpp  shape.h  sharding.cpp  sharding.h  sharding_params.cc  sharding_params.h  test_pjrt_basic.cpp  xla_shardings.cpp  xla_shardings.h
xftcpp/tests/: BUILD.bazel  test_nanobind.cpp  test_xla_link.cc
xftcpp/tools/: pywrap.bzl
xftcpp/tools/python_runtime/: BUILD.bazel
xftcpp/tools/tests/: BUILD.bazel
