# ============================================================================
# XFT - Deep Learning Framework
# ============================================================================
# Modern Python packaging configuration (PEP 517/518)
# Build system: setuptools with pybind11 integration

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "pybind11>=2.9.0",
    "cmake>=3.15",
]
build-backend = "setuptools.build_meta"

# ============================================================================
# Project Metadata
# ============================================================================

[project]
name = "xft"
version = "0.1.0"
description = "XFT - Deep Learning Framework optimized for x86_64"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Aakriti Suresh", email = "your.email@example.com"},
]
requires-python = ">=3.8"
keywords = ["deep-learning", "tensor", "neural-network", "x86_64", "avx2"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Runtime dependencies
dependencies = [
    "numpy>=1.20.0",
]

# Optional dependencies for development and testing
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/Sureshmohan19/xft"
Repository = "https://github.com/Sureshmohan19/xft"
Documentation = "https://github.com/Sureshmohan19/xft#readme"
Issues = "https://github.com/Sureshmohan19/xft/issues"

# ============================================================================
# Tool Configuration
# ============================================================================

[tool.setuptools]
packages = ["xft"]

[tool.setuptools.package-data]
xft = ["*.so", "*.pyd"]

# ============================================================================
# Testing Configuration
# ============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]

# ============================================================================
# Type Checking Configuration
# ============================================================================

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
files = ["xft"]

# ============================================================================
# Code Formatting Configuration
# ============================================================================

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

