# Root BUILD.bazel - Aliases for convenience

# Alias to main Python extension (note: actual target has .so)
alias(
    name = "_xft_core",
    actual = "//xftcpp/bindings:_xft_core.so",
    visibility = ["//visibility:public"],
)

# Alias to alternative Python module
alias(
    name = "xftcpp",
    actual = "//xftcpp/bindings:xftcpp.so",
    visibility = ["//visibility:public"],
)

# Alias to nanobind test
alias(
    name = "_test_nanobind",
    actual = "//xftcpp/tests:_test_nanobind.so",
    visibility = ["//visibility:public"],
)